[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/multiplayer/lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyName" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 292.0
margin_bottom = 88.0
text = "Enter name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adress" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 112.0
margin_right = 292.0
margin_bottom = 136.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="."]
margin_left = 64.0
margin_top = 152.0
margin_right = 128.0
margin_bottom = 172.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 136.0
margin_top = 152.0
margin_right = 200.0
margin_bottom = 172.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disconnect" type="Button" parent="."]
visible = false
margin_left = 64.0
margin_top = 152.0
margin_right = 200.0
margin_bottom = 172.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ping" type="Button" parent="."]
margin_left = 320.0
margin_top = 112.0
margin_right = 404.0
margin_bottom = 132.0
disabled = true
text = "Ping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="."]
margin_left = 320.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 96.0
disabled = true
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 200.0
margin_right = 256.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Peers" type="Label" parent="."]
margin_left = 472.0
margin_top = 88.0
margin_right = 704.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Peers2" type="Label" parent="."]
margin_left = 472.0
margin_top = 64.0
margin_right = 664.0
margin_bottom = 168.0
text = "Peers connected:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Ping" to="." method="_on_Ping_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
